--- a/notebooks/wsb_sentiment_ic.ipynb
+++ b/notebooks/wsb_sentiment_ic.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "da61e7b7",
    "metadata": {},
    "outputs": [],
@@ -35,13 +35,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "14dd441e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>score</th>\n",
+       "      <th>id</th>\n",
+       "      <th>url</th>\n",
+       "      <th>comms_num</th>\n",
+       "      <th>created</th>\n",
+       "      <th>body</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>ticker</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>It's not about the money, it's about sending a...</td>\n",
+       "      <td>55</td>\n",
+       "      <td>l6ulcx</td>\n",
+       "      <td>https://v.redd.it/6j75regs72e61</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.611863e+09</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021-01-28 21:37:41</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Math Professor Scott Steiner says the numbers ...</td>\n",
+       "      <td>110</td>\n",
+       "      <td>l6uibd</td>\n",
+       "      <td>https://v.redd.it/ah50lyny62e61</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1.611862e+09</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021-01-28 21:32:10</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Exit the system</td>\n",
+       "      <td>0</td>\n",
+       "      <td>l6uhhn</td>\n",
+       "      <td>https://www.reddit.com/r/wallstreetbets/commen...</td>\n",
+       "      <td>47</td>\n",
+       "      <td>1.611862e+09</td>\n",
+       "      <td>The CEO of NASDAQ pushed to halt trading “to g...</td>\n",
+       "      <td>2021-01-28 21:30:35</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NEW SEC FILING FOR GME! CAN SOMEONE LESS RETAR...</td>\n",
+       "      <td>29</td>\n",
+       "      <td>l6ugk6</td>\n",
+       "      <td>https://sec.report/Document/0001193125-21-019848/</td>\n",
+       "      <td>74</td>\n",
+       "      <td>1.611862e+09</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021-01-28 21:28:57</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Not to distract from GME, just thought our AMC...</td>\n",
+       "      <td>71</td>\n",
+       "      <td>l6ufgy</td>\n",
+       "      <td>https://i.redd.it/4h2sukb662e61.jpg</td>\n",
+       "      <td>156</td>\n",
+       "      <td>1.611862e+09</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021-01-28 21:26:56</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title  score      id  \\\n",
+       "0  It's not about the money, it's about sending a...     55  l6ulcx   \n",
+       "1  Math Professor Scott Steiner says the numbers ...    110  l6uibd   \n",
+       "2                                    Exit the system      0  l6uhhn   \n",
+       "3  NEW SEC FILING FOR GME! CAN SOMEONE LESS RETAR...     29  l6ugk6   \n",
+       "4  Not to distract from GME, just thought our AMC...     71  l6ufgy   \n",
+       "\n",
+       "                                                 url  comms_num       created  \\\n",
+       "0                    https://v.redd.it/6j75regs72e61          6  1.611863e+09   \n",
+       "1                    https://v.redd.it/ah50lyny62e61         23  1.611862e+09   \n",
+       "2  https://www.reddit.com/r/wallstreetbets/commen...         47  1.611862e+09   \n",
+       "3  https://sec.report/Document/0001193125-21-019848/         74  1.611862e+09   \n",
+       "4                https://i.redd.it/4h2sukb662e61.jpg        156  1.611862e+09   \n",
+       "\n",
+       "                                                body            timestamp  \\\n",
+       "0                                                NaN  2021-01-28 21:37:41   \n",
+       "1                                                NaN  2021-01-28 21:32:10   \n",
+       "2  The CEO of NASDAQ pushed to halt trading “to g...  2021-01-28 21:30:35   \n",
+       "3                                                NaN  2021-01-28 21:28:57   \n",
+       "4                                                NaN  2021-01-28 21:26:56   \n",
+       "\n",
+       "  ticker  \n",
+       "0   None  \n",
+       "1   None  \n",
+       "2   None  \n",
+       "3   None  \n",
+       "4   None  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Read in Reddit data as pd.DataFrame\n",
-    "reddit = preprocess.load_reddit()"
+    "reddit = pd.read_csv('../data/reddit_wsb_parsed.csv')\n",
+    "reddit.head()"
    ]
   },
   {
@@ -54,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "66915c89",
    "metadata": {},
    "outputs": [
@@ -69,7 +202,8 @@
       "comms_num: 53187\n",
       "created: 53187\n",
       "body: 24738\n",
-      "timestamp: 53187\n"
+      "timestamp: 53187\n",
+      "ticker: 0\n"
      ]
     }
    ],
@@ -95,6 +229,30 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "304d1997",
+   "metadata": {},
+   "source": [
+    "## 2: Daily sentiment feature"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efa28509",
+   "metadata": {},
+   "source": [
+    "### 2a: Use VADER (or FinBERT for finance-tuned) to score each post"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35718866",
+   "metadata": {},
+   "source": [
+    "### 2b: Aggregate to sent_mean, sent_median, bull_ratio by ticker-date."
+   ]
   }
  ],
  "metadata": {
