--- a/notebooks/wsb_sentiment_ic.ipynb
+++ b/notebooks/wsb_sentiment_ic.ipynb
@@ -1914,16 +1914,71 @@
    "execution_count": null,
    "id": "f06018c5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.0030721254451882662, 0.1658556581135067, 0.22631244424389496, 0.09388602640157351, -0.14821537576503682, -0.0683887828761555, -0.025444468124742506, 0.02433003043307689, -0.28539262720587316, -0.1264588591358041, 0.21428571428571433, -0.1795090382328646, 0.08883572409229369, 0.021608259338682302, -0.01408024473973172, 0.04456787917991338, 0.024659288324443383, -0.21470588235294116, 0.06301254469352173]\n",
+      "\n",
+      "Mean IC: -0.005153359724827208\n",
+      "Median IC: 0.021608259338682302\n",
+      "IC Standard Deviation: 0.1360596310814102\n"
+     ]
+    }
+   ],
    "source": [
     "from scipy.stats import spearmanr\n",
     "\n",
+    "# Create a DataFrame with the required info for weekly ICs\n",
     "test_results = X_test.copy()\n",
     "test_results['actual_returns'] = y_test\n",
     "test_results['predicted_returns'] = y_pred\n",
+    "test_results['date'] = pd.to_datetime(test['date'])\n",
     "\n",
-    "corrs = []"
+    "# Will store all weekly ICs\n",
+    "corrs = []\n",
+    "\n",
+    "# Extract the first and last dates in the dataset\n",
+    "first_day = min(test_results['date'])\n",
+    "last_day = max(test_results['date'])\n",
+    "\n",
+    "# Create weekly date ranges\n",
+    "date_range = pd.date_range(start=first_day, end=last_day, freq='W')\n",
+    "\n",
+    "# Pointers for start and end dates\n",
+    "start_index = 0\n",
+    "end_index = 1\n",
+    "while end_index < len(date_range):\n",
+    "    # Get start and end dates\n",
+    "    start_date = pd.to_datetime(date_range[start_index])\n",
+    "    end_date = pd.to_datetime(date_range[end_index])\n",
+    "\n",
+    "    # Extract relevant rows of the test data that are between\n",
+    "    # the start and the end date\n",
+    "    week_data = test_results[(test_results['date'] >= start_date) & (test_results['date'] <= end_date)]\n",
+    "\n",
+    "    correlation, p_value = spearmanr(week_data['actual_returns'], week_data['predicted_returns'])\n",
+    "    if not pd.isna(correlation):\n",
+    "        corrs.append(correlation)\n",
+    "\n",
+    "    # Increment start and end pointers\n",
+    "    start_index += 1\n",
+    "    end_index += 1\n",
+    "\n",
+    "# Show summary statistics\n",
+    "print(f\"\\nMean IC: {np.mean(corrs)}\")\n",
+    "print(f\"Median IC: {np.median(corrs)}\")\n",
+    "print(f\"IC Standard Deviation: {np.std(corrs)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf03d451",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
